# claude-config

./: .gitignore  CLAUDE.md  settings.json
.github/workflows/: ci.yml
canvas/: module-composition.canvas  project-dependencies.canvas  system-architecture.canvas
docs/: rtk-reference.md
evolution/: declined-proposals.md  evolution-log.md  metrics.md  run-evolution.md
evolution/tasks/: hook-stress.md  planned-feature.md  team-dispatch.md  trivial-bugfix.md
hermes-bridge/: pyproject.toml
hermes-bridge/hooks/: pre-compact.py  session-end.py  session-start-compact.py  spike-log.py
hermes-bridge/scripts/: backfill.py
hermes-bridge/src/hermes_bridge/: __init__.py  checkpoint.py  db.py  deliverables.py  indexer.py  search.py  server.py
hermes-bridge/tests/: conftest.py  test_checkpoint.py  test_db.py  test_deliverables.py  test_indexer.py  test_search.py
hooks/: plan-review-gate.py  pre-commit  retrospective-gate.py  session-extract.py  session-orient.py  task-completion-gate.py
modules/: README.md  architecture.md  completion-checklist.md  compliance-audit.md  prioritization.md  security-review.md  verification.md
projects/C--Users-Anderfail/: bridge-pointer.json
scripts/: brain-ingest.py  vault-health.sh
skills/: vault-canvas.md  vault-health.md  vault-ingest.md  vault-reindex.md  vault-review.md  vault-standup.md  workflow-protocol.md
skills/appendix-k-regulations/: SKILL.md
skills/celery-tasks/: SKILL.md
skills/compliance-checks/: SKILL.md
skills/excel-import-system/: SKILL.md
skills/frontend-architecture/: SKILL.md
(+27 files in other folders)
